--- a/my-first-pwapp/index.html
+++ b/my-first-pwapp/index.html
@@ -147,6 +147,13 @@
   </div>
 
   <script src="scripts/app.js" async></script>
+  <script type="text/javascript">
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+               .register('./service-worker.js')
+               .then(function() { console.log('Service Worker Registered'); });
+    }
+  </script>
 
 </body>
 </html>
