--- a/my-first-pwapp/index.html
+++ b/my-first-pwapp/index.html
@@ -151,7 +151,9 @@
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker
                .register('./service-worker.js')
-               .then(function() { console.log('Service Worker Registered'); });
+               .then(function(registration) { 
+                  console.log('Service Worker Registered', registration.scope); 
+               });
     }
   </script>
 
